2002-03-21  Philippe Elie  <ph_e@club-internet.fr>

	* op_user.h:
	* pp/oprofpp.h: more doxygen comments

	* dae/opd_kernel.c:
	* dae/opd_proc.c:
	* dae/opd_util.c:
	* dae/oprofiled.c:
	* gui/oprof_start.cpp:
	* gui/oprof_start_util.cpp: exit(): use {EXIT_FAILURE|EXIT_SUCCESS}

2002-03-20  Philippe Elie  <ph_e@club-internet.fr>

	* pp/opf_filter.h: simplify slightly interface of samples_files_t
	* oprof_report/oprof_report.cpp:
	* pp/op_time.cpp:
	* pp/opf_container.cpp:
	* pp/opf_filter.cpp:
	* pp/oprofp.cpp: reflect the new interface.

	* pp/opp_symbol.cpp: ParseOutputOption --> static member of
	  OutputSymbol ...

	* pp/opp_symbol.h:
	* util/file_manip.h:
	* util/string_manip.h: doxygen comments

2002-03-19  Philippe Elie  <ph_e@club-internet.fr>

	* scripts/Doxyfile: small tweak
	* op_user.h:
	* pp/opp_symbol.h:
	* pp/oprofpp.h:
	* util/child_reader.h: doxygen comments.

2002-03-19  Philippe Elie  <ph_e@club-internet.fr>

	* pp/opf_filter.h:
	* pp/opf_container.cpp: remove delegation
	  {symbol|samples}_container_t -> xxx_impl, no functionnal change

	* pp/*: start a more serious doxygenization. first step
	  include fixing prototype and a client documentation for
 	  opp_bfd
	* script/Doxyfile: doxygen script for pp/*.h, util/*.h
	
2002-03-19  John Levon  <moz@compsoc.man.ac.uk>

	* module/op_fixmap.c: include pagemap.h, so
	we pick up highmem.h, which is needed with
	some kernels (missing kmap_pagetable define
	via pte_offset)
 
2002-03-18  Philippe Elie  <ph_e@club-internet.fr>

	* pp/op_time.cpp:
	* doc/oprofile1.1.in:
	* doc/oprofile.sgml: allow reverse sort in all case

	* pp/opp_symbol.h:
	* pp/opp_symbol.cpp: remove unnecessary cast

	* oprof_report/oprof_report.cpp:
	* oprof_report/oprof_report.h:
	* oprof_report/*_view.*: revert partially 2002-03-17 patch,
	  making again data change notification in two step.

2002-03-17  John Levon  <moz@compsoc.man.ac.uk>

	* pp/oprofpp_util.cpp: clarify binutils bug workaround
 